@@ -2,12 +2,11 @@ Manifest-Version: 1.0
 Ant-Version: Apache Ant 1.6.5
 Created-By: 1.5.0_06-64 ("Apple Computer, Inc.")
 Main-Class: au.com.BI.Home.eLife
-Class-Path: ../ext/classes ../ext/quartz-1.5.2.jar ../ext/commons-logg
- ing.jar ../ext/commons-collections-3.1.jar ../ext/commons-logging-api
- .jar ../ext/jrobin-1.4.0.jar ../ext/snmp-1.3.jar ../ext/jdom.jar ../e
- xt/xml-apis.jar ../ext/xalan.jar ../ext/junit.jar ../ext/jython.jar .
- ./ext/commons-io-1.2.jar ../ext/commons-lang-2.1.jar ../ext/bin-groov
- y ../ext/junit-addons-1.4.jar ../ext/xmlunit1.0.jar ../ext/groovy-all
- -1.0-JSR-06.jar ../ext/RXTXcomm.jar ../ext/servlet-api-2.5-6.0.1.jar 
- ../ext/jetty-util-6.0.1.jar ../ext/jetty-6.0.1.jar
+Class-Path: ../ext/build ../ext/groovy-all-1.0-JSR-06.jar ../ext/jdom.
+ jar ../ext/xml-apis.jar ../ext/xalan.jar ../ext/servlet-api-2.5-6.0.1
+ .jar ../ext/jetty-util-6.0.1.jar ../ext/jetty-6.0.1.jar ../ext/jrobin
+ -1.4.0.jar ../ext/snmp-1.3.jar ../ext/junit.jar ../ext/junit-addons-1
+ .4.jar ../ext/jython.jar ../ext/quartz-1.5.2.jar ../ext/commons-loggi
+ ng.jar ../ext/commons-collections-3.1.jar ../ext/commons-logging-api.
+ jar ../ext/RXTXcomm.jar ../ext/xmlunit1.0.jar
 
