@@ -1,83 +1,0 @@
-<project name="eLife" default="Build" basedir=".">
-    <description>
-        The eLife application
-    </description>
-
-	
-<target name="jar"  >
-	<jar destfile="Build/eLife.jar" 
-		update="false"
-		basedir="classes" 
-		includes = "**/*.class" 
-		excludes = "**/Test*.class"
-		manifest="manifest" />
-	<jar destfile="Build/eLife.jar" 
-		update="true"
-		basedir="src" 
-		includes = "**/*.properties" 
-		 />
-</target>
-	
-<target name="templates" >
-	<copy todir="templates">
-	    <fileset dir="../" includes="**/*.xsd"  excludes="**/templates/**" />
-	    <fileset dir="../" includes="**/*.dtd"  excludes="**/templates/**" />
-	    <fileset dir="../" includes="**/config_ref.xml" excludes="**/templates/**" />
-	    <fileset dir="../" includes="**/datafiles/*.xml" excludes="**/templates/**" />
-	</copy>
-</target>
-
-
-	<target name="run" depends="" >
-		  <java 
-		  	classname="au.com.BI.Home.eLife"
-		  	 >
-		  	
-		    <classpath>
-		    		<pathelement location="classes"/>
-		    	   <fileset dir="ext" includes="*.jar"/>	 
-		  	</classpath>
-		  </java>
-	</target>
-	
-<path id="run.path">
-		   <pathelement path="${classpath}"/>
-		   <pathelement location="classes"/>
-		   <fileset dir="ext" includes="*.jar"/>	 
-</path>
-	
-<target name="Build" depends="dist_clean,increment,jar,templates" >
-	<zip destfile="Build/${app_name}-${major_version}${minor_version}.zip" 
-		update="false"
-		basedir="Build" 
-		includes = "*.jar" />
-	<zip destfile="Build/${app_name}-${major_version}${minor_version}.zip" 
-		update="true"
-		basedir="."
-		includes = "my.properties" />
-	<zip destfile="Build/${app_name}-${major_version}${minor_version}.zip" 
-		update="true"
-		basedir="."
-		includes = "templates/**" />	
-	<zip destfile="Build/${app_name}-${major_version}${minor_version}.zip" 
-		update="true"
-		basedir="."
-		includes = "config/config_ref.xml" />	
-</target>
-
-<target name="dist_clean" depends="" >
-	  <delete>
-	    <fileset dir="Build" includes="*.zip"/>
-	    <fileset dir="Build" includes="*.jar"/>
-	  </delete>
-</target>
-
-<target name="increment" depends="" description="Increments build number and creates a zip file.">
-<propertyfile file="src/au/com/BI/Home/my.properties" >
-  <entry  key="minor_version" type="int" operation="+" value="1" />
-</propertyfile>
-<property file="src/au/com/BI/Home/my.properties" />
-	<echo message="Version number now ${major_version}${minor_version}" />
-</target>
-
-</project>
