@@ -1,4 +1,4 @@
-#Wed Nov 01 20:18:22 EST 2006
+#Fri Nov 03 09:10:17 EST 2006
 major_version=1.6b
-minor_version=3
+minor_version=4
 app_name=eLife
